@@ -1,5 +1,6 @@
-# $Id: CHANGELOG,v 1.143 2005/02/25 16:57:18 tom_kelly33 Exp $
+# $Id: CHANGELOG,v 1.144 2005/02/26 00:34:05 tom_kelly33 Exp $
 
+* 2005-02-26 [rc.sysinit.in] skip unionfs test/debug section 
 * 2005-02-25 [mklivecd] another keyboard link correction: Ikerek
 * 2005-02-18 [hwdetect] corrected net-pf-10 off bug, thanks to Tex & Ikerek
 * 2005-02-17 [hwdetect & livecd-install] add sata_nv, thanks to Ocilent
